Minor alignment fixes in the remote

--- a/assets/scss/main_remote.scss
+++ b/assets/scss/main_remote.scss
@@ -150,7 +150,7 @@ body {
   position: fixed;
   top: 0;
 
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 
   overflow: hidden;
